--- a/404.html
+++ b/404.html
@@ -57,10 +57,11 @@
 
     </style>
 </noscript><meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod" />
+<meta property="og:description"
+  content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://yxr620.github.io/404.html" /><meta property="og:image" content="https://yxr620.github.io/papermod-cover.png"/>
-
+<meta property="og:url" content="https://yxr620.github.io/404.html" />
+<meta property="og:image" content="https://yxr620.github.io/papermod-cover.png" />
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://yxr620.github.io/papermod-cover.png"/>
 
