--- a/series/index.html
+++ b/series/index.html
@@ -57,7 +57,7 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="Series" />
+</noscript><link rel="stylesheet" href="https://yxr620.github.io/%20css/custom.css" /><meta property="og:title" content="Series" />
 <meta property="og:description"
   content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod" />
 <meta property="og:type" content="website" />
@@ -113,6 +113,11 @@
             </span>
         </div>
         <ul id="menu">
+            <li>
+                <a href="https://yxr620.github.io/blog/" title="📝 Blog">
+                    <span>📝 Blog</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
