--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="robots" content="index, follow">
 <title>Blog</title>
 
-<meta name="description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
+<meta name="description" content="🎓 PhD Student @ HKU | 🔬 ML Systems &amp; HPC Research">
 <meta name="author" content="yxr620">
 <link rel="canonical" href="https://yxr620.github.io/" />
 <link crossorigin="anonymous" href="/assets/css/stylesheet.min.c88963fe2d79462000fd0fb1b3737783c32855d340583e4523343f8735c787f0.css" integrity="sha256-yIlj/i15RiAA/Q&#43;xs3N3g8MoVdNAWD5FIzQ/hzXHh/A=" rel="preload stylesheet" as="style">
@@ -58,17 +58,17 @@
         }
 
     </style>
-</noscript><meta property="og:title" content="Home" />
+</noscript><link rel="stylesheet" href="https://yxr620.github.io/%20css/custom.css" /><meta property="og:title" content="Xiangrui Yang" />
 <meta property="og:description"
-  content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod" />
+  content="🎓 PhD Student @ HKU | 🔬 ML Systems &amp; HPC Research" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://yxr620.github.io/" />
 <meta property="og:image" content="https://yxr620.github.io/papermod-cover.png" />
 <meta name="twitter:card" content="summary_large_image"/>
 <meta name="twitter:image" content="https://yxr620.github.io/papermod-cover.png"/>
 
-<meta name="twitter:title" content="Home"/>
-<meta name="twitter:description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"/>
+<meta name="twitter:title" content="Xiangrui Yang"/>
+<meta name="twitter:description" content="🎓 PhD Student @ HKU | 🔬 ML Systems &amp; HPC Research"/>
 
 <script type="application/ld+json">
 {
@@ -127,43 +127,135 @@
             </span>
         </div>
         <ul id="menu">
+            <li>
+                <a href="https://yxr620.github.io/blog/" title="📝 Blog">
+                    <span>📝 Blog</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
-<main class="main"><div class="profile">
-    <div class="profile_inner">
+<main class="main">
+<article class="cv-page">
+    <header class="cv-header">
         <h1>Xiangrui Yang</h1>
-        <span><p>🎓 Master Student @ HUST | 🔬 ML Systems &amp; HPC Research</p>
-<p>I focus on machine learning system optimization and high-performance computing.</p>
-</span><div class="social-icons">
-    <a href="https://github.com/yxr620" target="_blank" rel="noopener noreferrer me" title="Github">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-    stroke-linecap="round" stroke-linejoin="round">
-    <path
-        d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22">
-    </path>
-</svg>
-    </a>
-    <a href="mailto:yxr620@hust.edu.cn" target="_blank" rel="noopener noreferrer me" title="Email">
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 21" fill="none" stroke="currentColor" stroke-width="2"
-    stroke-linecap="round" stroke-linejoin="round">
-    <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
-    <polyline points="22,6 12,13 2,6"></polyline>
-</svg>
-    </a>
-</div>
+        <p class="cv-subtitle">🎓 PhD Student @ HKU | 🔬 ML Systems &amp; HPC Research</p>
+    </header>
 
-        <div class="buttons">
-            <a class="button" href="blog" rel="noopener" title="📝 Blog">
-                <span class="button-inner">📝 Blog</span>
-            </a>
-            <a class="button" href="cv" rel="noopener" title="📄 CV">
-                <span class="button-inner">📄 CV</span>
-            </a>
-        </div>
+    <div class="cv-content post-content"><p><strong>📧 Email</strong>: <a href="mailto:yxr620@hust.edu.cn">yxr620@hust.edu.cn</a> | <strong>📱 Phone</strong>: (+86) 18963961350</p>
+<hr>
+<h2 id="about-me">About Me<a hidden class="anchor" aria-hidden="true" href="#about-me">#</a></h2>
+<p>I am a first-year PhD student at the University of Hong Kong, advised by Professor <a href="https://yimingqiu.me/">Yiming Qiu</a>. I received my Master&rsquo;s degree in Computer Science from Huazhong University of Science and Technology (HUST), advised by Professor <a href="http://english.cs.hust.edu.cn/info/1464/1194.htm">Qiang Cao</a>, and my Bachelor&rsquo;s degree in Computer Science from Sun Yat-Sen University (SYSU), advised by Professor <a href="https://cse.sysu.edu.cn/content/2951">Yuedong Yang</a>.</p>
+<p>My research interests lie in the optimization of machine learning systems and high-performance computing. I have experience working with tools like CUDA and DGL for model acceleration. I researched sparse matrix multiplication in an advertisement scoring system during the internship at Tencent.</p>
+<p>Outside of academia, I enjoy diving into economics and investment.</p>
+<hr>
+<h2 id="education-background">Education Background<a hidden class="anchor" aria-hidden="true" href="#education-background">#</a></h2>
+<h3 id="university-of-hong-kong"><strong>University of Hong Kong</strong><a hidden class="anchor" aria-hidden="true" href="#university-of-hong-kong">#</a></h3>
+<p><em>Department of Computer Science, PhD</em><br>
+<strong>Duration</strong>: Nov. 2025 - Now<br>
+<strong>Supervisor</strong>: Professor Yiming Qiu</p>
+<h3 id="huazhong-university-of-science-and-technology"><strong>Huazhong University of Science and Technology</strong><a hidden class="anchor" aria-hidden="true" href="#huazhong-university-of-science-and-technology">#</a></h3>
+<p><em>School of Computer Science and Technology, Master Degree</em><br>
+<strong>Duration</strong>: Sep. 2022 - Jun. 2025<br>
+<strong>Honor</strong>: Outstanding Graduate (Top 20%)</p>
+<h3 id="sun-yat-sen-university"><strong>Sun Yat-sen University</strong><a hidden class="anchor" aria-hidden="true" href="#sun-yat-sen-university">#</a></h3>
+<p><em>School of Computer Science and Engineering, Bachelor Degree</em><br>
+<strong>Duration</strong>: Sep. 2018 - Jun. 2022</p>
+<hr>
+<h2 id="talks--presentations">Talks &amp; Presentations<a hidden class="anchor" aria-hidden="true" href="#talks--presentations">#</a></h2>
+<ul>
+<li>ICME'25, IEEE International Conference on Multimedia &amp; Expo 2025, Nantes, France. <a href="https://whova.com/embedded/session/hlWY6K3rL7pHvG8Yd1TfjYJVgDEZvOuEPKWGmeuUbIQ%3D/4654604/?widget=primary">Website</a></li>
+<li>FAST'25, 23rd USENIX Conference on File and Storage Technologies, Santa Clara, California. <a href="https://www.youtube.com/watch?v=6dGa7Ol8Ryk">video</a></li>
+<li>SoCC'24, 15th ACM Symposium on Cloud Computing, Redmond, Washington.</li>
+<li>HiPEAC'25, 20th High Performance, Edge And Cloud computing, Barcelona, Spain.</li>
+</ul>
+<hr>
+<h2 id="academic-papers">Academic Papers<a hidden class="anchor" aria-hidden="true" href="#academic-papers">#</a></h2>
+<ul>
+<li><a href="https://ieeexplore.ieee.org/document/11209980">HeteroGNN: A Heterogeneous Task Division Based GNN Training Framework to Maximize CPU-GPU Parallelism</a>, ICME 2025</li>
+<li><a href="https://www.usenix.org/conf%C3%A9rence/fast26/presentation/zhan">Rearchitecting Buffered I/O in the Era of High-Bandwidth SSDs</a>, FAST 2026</li>
+<li>ASMA: An Anisotropy Scaling Memristor-based Accelerator for LLM Inference, ICCD 2025</li>
+<li><a href="https://www.usenix.org/conference/fast25/presentation/zhan">Rethinking the Request-to-IO Transformation Process of File Systems for Full Utilization of High-Bandwidth SSDs</a>, FAST&rsquo; 25</li>
+<li><a href="https://dl.acm.org/doi/10.1145/3708538">AIS: An Active Idleness I/O Scheduler to Reduce Buffer-Exhausted Degradation for Commodity SSDs</a>, ACM TACO</li>
+<li><a href="https://dl.acm.org/doi/10.1145/3698038.3698539">RomeFS: A CXL-SSD Aware File System Exploiting Synergy of Memory-Block Dual Paths</a>, SoCC&rsquo; 24</li>
+<li><a href="https://ieeexplore.ieee.org/document/10818010/">HEncode: A Highly Modularized and Efficient FPGA QC-LDPC Encoder Using High Level Synthesis</a>, ICCD&rsquo; 24</li>
+<li><a href="http://xwxt.sict.ac.cn/CN/Y2025/V46/I4/1003">A Study on Data-Layout Optimization in Memory for High-Performance Erasure Coding</a></li>
+<li><a href="https://www.spiedigitallibrary.org/conference-proceedings-of-spie/13067/130670E/Analyzing-performance-degradation-for-wide-stripe-erasure-codes/10.1117/12.3024709.full">Analyzing performance degradation for wide stripe erasure codes</a></li>
+<li><a href="https://dl.acm.org/doi/10.1145/3605573.3605629">PMLDS: An LSM-tree Direct Managed Storage for Key-value Stores on Byte-addressable Devices</a></li>
+<li><a href="https://arxiv.org/abs/2211.11543">Leveraging Orbital Information and Atomic Feature in Deep Learning Model</a></li>
+</ul>
+<hr>
+<h2 id="internship">Internship<a hidden class="anchor" aria-hidden="true" href="#internship">#</a></h2>
+<h3 id="tencenthttpswwwtencentcomen-us"><a href="https://www.tencent.com/en-us/">Tencent</a><a hidden class="anchor" aria-hidden="true" href="#tencenthttpswwwtencentcomen-us">#</a></h3>
+<p><em>Advertising Engineering Department Intern</em><br>
+<strong>Duration</strong>: May. 2024 - Sep. 2024  &amp; Apr. 2025 - Jun. 2025<br>
+<strong>Location</strong>: Shenzhen</p>
+<ul>
+<li>Used int8 quantization in Advertisement scoring system, achieving over 30% time reduction on GPU kernel functions and over 2% system throughput.</li>
+<li>Added new time-consuming analysis logs to the advertising recall system and adjusted the parameter settings to increase the QPS from 10,000 to 15,000.</li>
+</ul>
+<h3 id="shengquan-hengyuan-investment-companyhttpswwwsqhyfundcom"><a href="https://www.sqhyfund.com/">Shengquan Hengyuan Investment Company</a><a hidden class="anchor" aria-hidden="true" href="#shengquan-hengyuan-investment-companyhttpswwwsqhyfundcom">#</a></h3>
+<p><em>Quantitative Finance Researcher Intern</em><br>
+<strong>Duration</strong>: Jun. 2023 - Aug. 2023<br>
+<strong>Location</strong>: Nanjing</p>
+<ul>
+<li>Achieved annual cumulative abnormal return of over 30% using both high and low frequency trading information.</li>
+<li>Participated in configuring the training environment for GPU servers and accelerated the training process of time series models and multi-factor models with GPU servers.</li>
+</ul>
+<h3 id="miracle-plushttpswwwmiraclepluscomen"><a href="https://www.miracleplus.com/en/">Miracle Plus</a><a hidden class="anchor" aria-hidden="true" href="#miracle-plushttpswwwmiraclepluscomen">#</a></h3>
+<p><em>Investment and Operations Assistant Intern</em><br>
+<strong>Duration</strong>: May. 2023 - Jun. 2023<br>
+<strong>Location</strong>: Beijing</p>
+<ul>
+<li>Invested in an important startup in networking industry, with a Series A funding round in the tens of millions.</li>
+</ul>
+<h3 id="sysu-ai4sciencehttpbiomednscc-gzcnsailenresearch"><a href="http://biomed.nscc-gz.cn/sail/en:research">SYSU AI4Science</a><a hidden class="anchor" aria-hidden="true" href="#sysu-ai4sciencehttpbiomednscc-gzcnsailenresearch">#</a></h3>
+<p><em>Data Analyst</em><br>
+<strong>Duration</strong>: Jan. 2022 - Jun. 2022<br>
+<strong>Location</strong>: Guangzhou</p>
+<ul>
+<li>Extracted genetic relationships using random walking, and predicted Synthetic Lethality using a model constructed on a graph convolution network combined with a multi-view method.</li>
+<li>Used crystal database provided by Contemporary Amperex Technology Co. Limited to build message passing model to predict the physical characteristics of crystals.</li>
+</ul>
+<hr>
+<h2 id="academic-projects">Academic Projects<a hidden class="anchor" aria-hidden="true" href="#academic-projects">#</a></h2>
+<h3 id="model-optimization-works"><strong>Model Optimization Works</strong><a hidden class="anchor" aria-hidden="true" href="#model-optimization-works">#</a></h3>
+<ul>
+<li>Analyzed the bottlenecks in the convolutional modules of DGL using tools such as Nsight System and Nsight Compute, optimized the normalization module in Graph Convolutional Networks (GCN) based on sampling results, achieving a 30% improvement over DGL</li>
+<li>Proficient in using the cpp_extension tool to write C libraries for Python and capable of implementing CUDA operator overloading.</li>
+<li>Developed deep learning models using the deep graph model library DGL and got familiar with common Python libraries such as Pandas, Numpy, and Pytorch.</li>
+<li>Skilled in using the Linux development environment and environment control tools like Conda and Docker.</li>
+</ul>
+<h3 id="reed-solomon-code-optimization"><strong>Reed-Solomon Code Optimization</strong><a hidden class="anchor" aria-hidden="true" href="#reed-solomon-code-optimization">#</a></h3>
+<ul>
+<li>Analyzed the performance of wide-stripe and narrow-stripe erasure codes using the ISA-L and Jerasure encoding libraries, and compared the underlying finite field implementations.</li>
+<li>Achieved single node encoding throughput of 128 Gbps using existing RS encoding libraries with an OpenMP multithread implementation.</li>
+</ul>
+<h3 id="solid-state-drive-optimization"><strong>Solid-State Drive Optimization</strong><a hidden class="anchor" aria-hidden="true" href="#solid-state-drive-optimization">#</a></h3>
+<ul>
+<li>Developed SSDTEST to evaluate the performance of SSDs and the performance degradation to further modeling this phenomenon.</li>
+<li>Developed SSD IO scheduler to control the tail latency of SSD especially during the performance degradation.</li>
+</ul>
+<hr>
+<h2 id="certificates-and-awards">Certificates and Awards<a hidden class="anchor" aria-hidden="true" href="#certificates-and-awards">#</a></h2>
+<h3 id="awards">Awards<a hidden class="anchor" aria-hidden="true" href="#awards">#</a></h3>
+<ul>
+<li>Sangfor Scholarship (Apr. 2024)</li>
+<li>Huazhong University of Science and Technology Scholarship, Second Prize (Oct. 2023)</li>
+<li>Distinguished Activist in Community Affairs (Oct. 2023)</li>
+<li>Sun Yat-sen University Scholarship, Second Prize (Oct. 2021)</li>
+<li>2019 ACM-ICPC Sun Yat-sen University Competition, Second Prize, Guangzhou (Oct. 2019)</li>
+</ul>
+<h3 id="certificates">Certificates<a hidden class="anchor" aria-hidden="true" href="#certificates">#</a></h3>
+<ul>
+<li>IELTS (International English Language Testing System) 7.0</li>
+<li>GRE (Graduate Record Examinations) 320</li>
+<li>TOEFL (Test of English as a Foreign Language) 106</li>
+</ul>
+
+
     </div>
-</div>
-
+</article>
     </main>
     
 <footer class="footer">
