--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
         <p class="cv-subtitle">🎓 PhD Student @ HKU | 🔬 ML Systems &amp; HPC Research</p>
     </header>
 
-    <div class="cv-content post-content"><p><strong>📧 Email</strong>: <a href="mailto:yxr620@hust.edu.cn">yxr620@hust.edu.cn</a> | <strong>📱 Phone</strong>: (+86) 18963961350</p>
+    <div class="cv-content post-content"><img src="/images/user.jpg" align="right" width="150" style="margin-left: 20px; margin-bottom: 20px; border-radius: 10px; display: inline-block; margin-top: -80px;" />
+<p><strong>📧 Email</strong>: <a href="mailto:yxr620@hust.edu.cn">yxr620@hust.edu.cn</a> | <strong>📱 Phone</strong>: (+86) 18963961350</p>
 <hr>
 <h2 id="about-me">About Me<a hidden class="anchor" aria-hidden="true" href="#about-me">#</a></h2>
 <p>I am a first-year PhD student at the University of Hong Kong, advised by Professor <a href="https://yimingqiu.me/">Yiming Qiu</a>. I received my Master&rsquo;s degree in Computer Science from Huazhong University of Science and Technology (HUST), advised by Professor <a href="http://english.cs.hust.edu.cn/info/1464/1194.htm">Qiang Cao</a>, and my Bachelor&rsquo;s degree in Computer Science from Sun Yat-Sen University (SYSU), advised by Professor <a href="https://cse.sysu.edu.cn/content/2951">Yuedong Yang</a>.</p>
