--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="robots" content="index, follow">
-<title>Blog</title>
+<title>Homepage</title>
 
 <meta name="description" content="🎓 PhD Student @ HKU | 🔬 ML Systems &amp; HPC Research">
 <meta name="author" content="yxr620">
@@ -74,7 +74,7 @@
 {
   "@context": "https://schema.org",
   "@type": "Organization",
-  "name": "Blog",
+  "name": "Homepage",
   "url": "https://yxr620.github.io/",
   "description": "Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod",
   "thumbnailUrl": "https://yxr620.github.io/favicon.ico",
@@ -100,7 +100,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://yxr620.github.io/" accesskey="h" title="Blog (Alt + H)">Blog</a>
+            <a href="https://yxr620.github.io/" accesskey="h" title="Homepage (Alt + H)">Homepage</a>
             <span class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -260,7 +260,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2025 <a href="https://yxr620.github.io/">Blog</a></span>
+    <span>&copy; 2026 <a href="https://yxr620.github.io/">Homepage</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
